--- a/web/war/src/main/webapp/less/detail/properties.less
+++ b/web/war/src/main/webapp/less/detail/properties.less
@@ -106,7 +106,7 @@
 
   .property-value {
     padding: 0 0.5em 0 7px;
-    word-break: normal;
+    word-break: break-all;
     .value {
       flex: 1 1 auto;
     }
